--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,7 @@
 .about-container {
   margin: 4em;
   width: 90%;
-  min-width: 320px;
+  min-width: 340px;
   height: 100%;
   justify-content: center;
   padding-top: 2em;
@@ -181,9 +181,18 @@
 @media screen and (max-width: 480px) {
   .contact-list i {
     font-size: 24px;
-    padding-right: 5rem;
+    padding-right: 2rem;
   }
-  .mdl-list__item-primary-content {
-    font-size: 12px;
+  
+  .about-container {
+    margin: 4em 1em;
+  }
+
+  .about-container p {
+    font-size: 20px;
+  }
+
+  .contact-list span {
+    font-size: 16px;
   }
 }
